--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
   <!-- <link href="node_modules/@angular/material/prebuilt-themes/indigo-pink.css" rel="stylesheet"> -->
   
 </head>
-<body>
+<body class="mat-app-background">
   <app-root></app-root>
 </body>
 </html>
