--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <title>Romel Gomez - WebBlog</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="/favicon.ico">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Bad+Script|Bellefair" rel="stylesheet">  
 </head>
